--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ a:hover {
         right: 10px;
         z-index: 120;
         margin: 0 auto;
-        background: rgba(231, 238, 239, 0.4);
+        background: rgba(231, 238, 239, 1);
         display: none;
         top: 0;
         height: 100vh;
@@ -559,14 +559,31 @@ a:hover {
 
     .main-bcg {
         width: 100%;
-        height: 85%;
+        height:90%;
         display: block;
         margin: 2rem auto;
         background-color: #FFFFFF;
         box-shadow: 0 1rem 1rem black;
-        /* border-top: none; */
+        overflow: hidden;
+        box-sizing: border-box;
     }
+    .login-form{
 
+        height:75%;
+    }
+    .register-form{
+        position: relative;
+        top: 20px;
+        height:75%;
+
+    }
+    .register-form h3{
+        margin-top: 2rem;
+    }
+    .register-form .btn{
+        margin-right: 1rem;
+        padding: 0  2rem;
+    }
     .button {
         display: block;
     }
