--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
     outline: none;
     text-decoration: none;
 }
-
 body {
     background-color: #dddddd;
     overflow-x: hidden;
+    /* overflow: hidden; */
 }
 
 @media (max-width:768px) {
@@ -28,9 +28,9 @@ body {
 }
 
 .header {
-    width: 100%;
+    overflow-x: hidden; 
+    min-width: 100%;
 }
-
 .header .home-img {
     background-image: linear-gradient(rgba(27, 34, 64, 0.357), rgba(4, 9, 30, 0.7)), url(img/home/VSSUTMAIN.jpg);
     width: 100%;
@@ -38,7 +38,6 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* background-color: linner; */
 }
 
 nav {
@@ -259,13 +258,15 @@ nav .fa {
     .header .home-img {
         width: 100vw;
         min-height: 30vh;
+        overflow: hidden;
     }
 
     .text-box .hero-btn {
         width: 240px;
-        margin-bottom: 820px;
-        padding: 9px 24px;
-
+        overflow: hidden;
+        margin-bottom:100vh;
+        padding: 9px 20px;  
+        font-size: 12px;
     }
 
     .header .college .vssut {
@@ -279,6 +280,7 @@ nav .fa {
 }
 
 @media(max-width:480px) {
+   
     nav {
         width: 100%;
         height: 7vh;
@@ -318,12 +320,15 @@ nav .fa {
     }
 
     .text-box .hero-btn {
-        width: 200px;
+        width: 180px;
         margin-bottom: 800px;
         padding: 5px 18px;
         position: relative;
-        top: -9.5rem;
-        left: 1rem;
+        /* top: -9.5rem;*/
+        left: 0.5rem; 
+        overflow: hidden;
+        font-size: 12px;
+        margin-bottom:128vh;
     }
 
 }
